syntax = "proto3";

option go_package = ".;podlifecycle";

service Stuffer {
    rpc DoStuff(StuffRequest) returns (StuffResponse) {}
}

message StuffRequest {
    string name = 1;
}

message StuffResponse {
    string name = 1;
}